hphp/test/slow/parser/php-reserved-name-double-2.php.expectf
Fatal error: Cannot use 'HH\Double' as class name as it is reserved in %s on line 4
